@@ -1,5 +1,8 @@
 2010-10-10  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-util.lisp (open-notify-window): Convert hello-window
+	functions to a more generic Notify-window system.
+
 	* src/tools.lisp (add-timer): Add an id to identify the timer.
 
 2010-10-09  Philippe Brochard  <pbrochard@common-lisp.net>
